--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,8 @@
         </activity>
         <activity android:name=".Malls" />
         <activity android:name=".Competition" />
-        <activity android:name=".Promotions"></activity>
-
-       
+        <activity android:name=".Promotions" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
