--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.google.firebase:firebase-config:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.firebaseui:firebase-ui:0.6.2'
 }
 apply plugin: 'com.google.gms.google-services'
